# in_world_navigation

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
resources/source/archive/user/jackhumbert/materials/: arrow.mi
resources/source/archive/user/jackhumbert/meshes/: arrow.mesh
resources/source/archive/user/jackhumbert/particles/: world_navigation_cyan.particle  world_navigation_white.particle  world_navigation_yellow.particle
resources/source/archive/user/mathbou/effects/: world_navigation_blue.effect  world_navigation_cyan.effect  world_navigation_teal.effect  world_navigation_white.effect  world_navigation_yellow.effect
resources/source/archive/user/mathbou/particles/: world_navigation_blue.particle  world_navigation_cyan.particle  world_navigation_teal.particle  world_navigation_white.particle  world_navigation_yellow.particle
resources/source/raw/user/mathbou/meshes/: arrow.blend  arrow.glb
src/red4ext/: CMakeLists.txt  Main.cpp  Utils.cpp  stdafx.hpp
src/redscript/in_world_navigation/: InWorldNavigation.reds
tools/: 0_deps.ps1  1_build.ps1  2_release.ps1  VsX64.ps1  build_spdlog.ps1  redscript_lint.ps1  test_CP77.ps1
